--- a/produto.html
+++ b/produto.html
@@ -7,125 +7,178 @@
   <title>Detalhes do Produto</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      margin: 0;
+      padding: 0;
+    }
+
+    .navbar {
+      background-color: #0011ff;
+      padding: 15px 25px;
+      color: white;
+    }
+
+    .navbar a {
+      color: white;
+      text-decoration: none;
+    }
+
+    .navbar a:hover {
+      text-decoration: underline;
+    }
+
+    .navbar input {
+      margin: 0 15px;
+      flex: 1;
+    }
+
+    .product-container {
+      display: flex;
+      background-color: white;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+      margin: 20px auto;
+      max-width: 900px;
+    }
+
+    .product-image {
+      flex: 1;
+      background-color: #f0f0f0;
+      padding: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .product-image img {
+      max-width: 100%;
+      height: auto;
+    }
+
+    .product-details {
+      flex: 1;
+      padding: 20px;
+    }
+
+    .product-title {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+
+    .product-price {
+      font-size: 28px;
+      color: #28a745;
+      margin-bottom: 20px;
+    }
+
+    .product-description {
+      margin-bottom: 20px;
+    }
+
+    .btn-container {
+      display: flex;
+      gap: 10px;
+    }
+
+    .btn-container button {
+      flex: 1;
+    }
+
+    .rating {
+      display: flex;
+      align-items: center;
+      margin-bottom: 15px;
+    }
+
+    .rating span {
+      margin-left: 10px;
+      font-size: 14px;
+      color: #777;
+    }
+  </style>
 </head>
-<style>
-  body {
-    margin: 0;
-    background-color: white;
-    color: white;
-    font-family: jetBrains mono;
-  }
-
-  .product-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 40px;
-  }
-
-  .product-image {
-    width: 45%;
-    background-color: #5a5a5a;
-    text-align: center;
-    padding: 15px;
-  }
-
-  .product-image img {
-    width: 100%;
-    height: auto;
-    object-fit: contain;
-  }
-
-  .product-details {
-    font-size: 30px;
-    background-color: #afe0fd;
-    color: rgb(0, 0, 0);
-    width: 45%;
-    padding: 20px;
-    border: 2px solid #000000;
-    border-radius: 8px;
-  }
-
-  .btn-add-cart {
-    display: flex;
-    background-color: #007bff;
-    color: white;
-    font-weight: bold;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-  }
-
-  #barra-navegacao {
-    display: flex;
-    align-items: center;
-    background-color: #0011ff;
-    padding: 15px 25px;
-    border-bottom: 1px solid white;
-  }
-</style>
 
 <body>
-  <nav class="navbar navbar-expand-lg" id="barra-navegacao">
-    <div class="container-fluid">
-        <a class="navbar-brand text-white" href="index.html">
-            <img src="img/WhatsApp_Image_2024-12-04_at_21.31.59-removebg-preview (1).png" alt="Logo" width="45" height="45" class="d-inline-block align-text">
-            Tudo Aqui</a>
-        <input type="text" id="campo-busca" class="form-control w-50" placeholder="Buscar produto">
-        <a class="btn btn-success" href="carrinho.html">Ver Carrinho</a>
-    </div>
-</nav>
+  <nav class="navbar d-flex align-items-center">
+    <a href="index.html" class="navbar-brand d-flex align-items-center">
+      <img src="img/WhatsApp_Image_2024-12-04_at_21.31.59-removebg-preview (1).png" alt="Logo" width="45" height="45" class="me-2">
+      <span>Tudo Aqui</span>
+    </a>
+    <a class="btn btn-success ms-3" href="carrinho.html">Ver Carrinho</a>
+  </nav>
+
   <div class="container">
     <div class="product-container">
       <div class="product-image">
         <img id="product-image" src="" alt="Imagem do Produto">
       </div>
-
       <div class="product-details">
-        <h2 id="product-title">Nome do Produto</h2>
-        <p id="product-price">Preço do produto</p>
-        <p id="product-description">Descrição do produto</p>
-        <button id="btn-add-cart" class="btn btn-add-cart">Adicionar ao Carrinho</button>
+        <h2 id="product-title" class="product-title">Nome do Produto</h2>
+        <div class="rating">
+          <span id="product-rating"></span>
+          <span id="product-reviews"></span>
+        </div>
+        <p id="product-price" class="product-price">Preço do produto</p>
+        <p id="product-description" class="product-description">Descrição do produto</p>
+        <div class="btn-container">
+          <button id="btn-add-cart" class="btn btn-primary">Adicionar ao Carrinho</button>
+          <button id="btn-comprar" class="btn btn-success">Comprar</button>
+        </div>
       </div>
     </div>
   </div>
 
   <script>
     $(document).ready(function () {
-      // Recuperar ID do produto da URL
       const urlParams = new URLSearchParams(window.location.search);
       const productId = urlParams.get('id');
 
-      // Função para buscar detalhes do produto
-      function fetchProductDetails(id) {
-        $.get(`https://fakestoreapi.com/products/${id}`, function (product) {
-          // Exibir os detalhes do produto na página
-          $('#product-image').attr('src', product.image);
-          $('#product-title').text(product.title);
-          $('#product-price').text(`$${product.price}`);
-          $('#product-description').text(product.description);
+      function buscarDetalhesProduto(id) {
+        $.get(`https://fakestoreapi.com/products/${id}`, function (produto) {
+          $('#product-image').attr('src', produto.image);
+          $('#product-title').text(produto.title);
+          $('#product-price').text(`R$ ${produto.price.toFixed(2)}`);
+          $('#product-description').text(produto.description);
+          $('#product-rating').text(`⭐ ${produto.rating.rate}`);
+          $('#product-reviews').text(`(${produto.rating.count} avaliações)`);
 
-          // Função para adicionar ao carrinho
           $('#btn-add-cart').click(function () {
-            addToCart(product);
+            adicionarAoCarrinho(produto);
           });
-        }).fail(function (error) {
-          console.log('Erro ao buscar produto:', error);
+        }).fail(function (erro) {
+          console.log('Erro ao buscar produto:', erro);
         });
       }
 
-      // Função para adicionar ao carrinho
-      function addToCart(product) {
-        let cart = JSON.parse(localStorage.getItem('cart')) || [];
-        cart.push(product);
-        localStorage.setItem('cart', JSON.stringify(cart));
-        alert(`${product.title} foi adicionado ao carrinho!`);
+      function adicionarAoCarrinho(produto) {
+        const carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
+
+        carrinho.push(produto);
+
+        localStorage.setItem('carrinho', JSON.stringify(carrinho));
+
+        alert('Produto adicionado ao carrinho!');
       }
 
-      // Carregar os detalhes do produto ao carregar a página
       if (productId) {
-        fetchProductDetails(productId);
+        buscarDetalhesProduto(productId);
       }
+
+      $('#btn-comprar').click(function () {
+        const logado = localStorage.getItem('logado') === 'true';
+        const produtoId = productId;
+
+        if (logado) {
+          window.location.href = `checkout.html?produtoId=${produtoId}`;
+        } else {
+          window.location.href = `login.html?produtoId=${produtoId}`;
+        }
+      });
     });
   </script>
 </body>
